# gecko-database

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  TODO  async.c  attr.c  basement.c  cmake_install.cmake  compile_commands.json  conf.c  debug.c  error.c  expr.c  field.c  field_type.c  frag.c  frag_printer.c  fragment.c  gecko.c  gecko.cbp  global.c  grid.c  grid_cursor.c  grid_table.c  gridstore.c  gridstore.cbp  gskernel.c  hash.c  hashing.c  install_dep.sh  interval.c  main.c  mondrian.c  mvm.c  object.c  pred.c  (+17 more)
assets/: impl 2.key  impl.key  pointer issues.key
cmake/: FindOS.cmake
containers/: dict.c  dictionary.c  freelist.c  hash_table.c  hashset.c  list.c  vec.c  vector.c
containers/dictionaries/: fixed_linear_hash_table.c  hash_table.c  linear_hash_table.c
containers/dictionaries/hash_tables/: linear_hash_table.c
containers/dicts/: hash_table.c
doc/: README
doc/mvm/: mvm bytecode instruction list.html
doc/rest/: api-1.0.html  make_toc.rb  rest-api-doc.md
etc/myimdb/: myimdb-swapbuf.conf
experiments/vm/os_paging/: launcher.c  results.csv  results_cleaned.csv
frag_printers/: console_printer.c
frags/: frag_dsm.c  frag_host_vm.c  frag_nsm.c
include/: area.h  async.h  attr.h  c11threads.h  conf.h  context.h  debug.h  defs.h  dispatch.h  dispatcher.h  error.h  field.h  field_type.h  frag.h  frag_printer.h  fragment.h  global.h  grid.h  grid_cursor.h  grid_table.h  gridstore.h  gs.h  gs_async.h  gs_attr.h  gs_batch_consumer.h  gs_collection.h  gs_collections.h  gs_database.h  gs_dispatcher.h  gs_error.h  gs_event.h  gs_field_type.h  gs_frag.h  gs_frag_printer.h  gs_grid.h  gs_grid_cursor.h  gs_gridstore.h  gs_hash.h  gs_http.h  gs_info.h  (+49 more)
include/catalog/: tables.h
include/consumers/: gs_batch_consumer_inter.h
include/containers/: dict.h  dictionary.h  freelist.h  gs_freelist.h  gs_hash.h  gs_hashset.h  gs_list.h  gs_vec.h  hash_table.h  hashset.h  list.h  vec.h  vector.h
include/containers/dictionaries/: fixed_linear_hash_table.h  hash_table.h  linear_hash_table.h
include/containers/dictionaries/hash_tables/: linear_hash_table.h
include/containers/dicts/: hash_table.h
include/frag_printers/: console_printer.h  gs_console_printer.h
include/frags/: frag_dsm.h  frag_host_vm.h  frag_nsm.h  gs_frag_host_vm.h
include/indexes/: grid_index.h  gs_hindex.h  gs_vindex.h  hindex.h  vindex.h
include/indexes/grid_indexes/: hash_grid_index.h
include/indexes/hindexes/: bsearch_hindex.h  gs_lsearch_hindex.h  lsearch_hindex.h
include/indexes/vindexes/: gs_hash_vindex.h  hash_vindex.h
include/inet/: gs_request.h  gs_response.h  gs_server.h  request.h  response.h  server.h
include/memory/: gs_mempool.h
include/operators/: gs_scan.h  scan.h
include/records/: gs_document.h  gs_object.h  gs_value.h
include/routers/: catch.h  gs_catch.h
include/routers/api/1.0/: collections.h  gs_collections.h  gs_databases.h  gs_nodes.h  gs_root.h  nodes.h  root.h
include/storage/: antibuf.h  attribute.h  buffer.h  catalog.h  database.h  dirs.h  edge.h  files.h  mem.h  memory.h  node.h  node_cursor.h  pool.h  property.h  property_cursor.h  rowstore.h  schema.h  slotted_page.h  table.h  timespan.h
indexes/: grid_index.c  hindex.c  vindex.c
indexes/grid_indexes/: hash_grid_index.c
indexes/hindexes/: bsearch_hindex.c  lsearch_hindex.c
indexes/vindexes/: hash_vindex.c
inet/: request.c  response.c  server.c
libs/libxjson/include/xjson/: xjson.h
libs/libxjson/src/xjson/: xjson.c
operators/: scan.c
playground/: grid_store_ycsb.c  gs_mondrian_grid_tables.c  gs_mondrian_virtual_machine.c  mondrian_grid_tables.c  mondrian_virtual_machine.c
playground_dsm/: exercice_helper.c  exercice_helper.h  play_fragments.c  play_fragments2.c  play_fragments3.c  reference_implementation.h  reference_scan_impl.h  scan_nsm_dsm_extream.c  scan_nsm_dsm_v.c
samples/: stddb.c
samples/buffmgr/: launcher.c
samples/containers/dictionaries/: linear_hash_table_linuxwc.c  linear_hash_table_sample.c
samples/core/: fragment.c  pred.c
samples/graphstore/: main.c
samples/relative_ptr/: main.c
samples/ycsb/: app.manifest  routes
samples/ycsb/routers/: init.js
sbin/: CMakeCache.txt  Makefile  cmake_install.cmake  do_code_style.sh  install_dep.sh  tpch_gen_data.sh
src/: async.c  attr.c  conf.c  dispatch.c  dispatcher.c  error.c  field_type.c  frag.c  frag_printer.c  global.c  grid.c  grid_cursor.c  gs_async.c  gs_attr.c  gs_batch_consumer.c  gs_collection.c  gs_collections.c  gs_database.c  gs_dispatcher.c  gs_error.c  gs_event.c  gs_field_type.c  gs_frag.c  gs_frag_printer.c  gs_global.c  gs_grid.c  gs_grid_cursor.c  gs_gridstore.c  gs_hash.c  gs_http.c  gs_interval.c  gs_mvm.c  gs_pred.c  gs_reltype.c  gs_schema.c  gs_shell.c  gs_spinlock.c  gs_system.c  gs_tableimg.c  gs_timer.c  (+24 more)
src/consumers/: gs_batch_consumer_printer.c  gs_batch_consumer_raw.c
src/containers/: dict.c  freelist.c  gs_freelist.c  gs_hash.c  gs_hashset.c  gs_list.c  gs_vec.c  hashset.c  list.c  vec.c
src/containers/dicts/: gs_hash_table.c  hash_table.c
src/frag_printers/: console_printer.c  gs_console_printer.c
src/frags/: frag_host_vm.c  gs_frag_host_fat_vm.c  gs_frag_host_thin_vm.c  gs_frag_host_vm.c  gs_frag_host_vm2.c
src/indexes/: gs_hindex.c  gs_vindex.c  hindex.c  vindex.c
src/indexes/hindexes/: gs_lsearch_hindex.c  lsearch_hindex.c
src/indexes/vindexes/: gs_hash_vindex.c  hash_vindex.c
src/inet/: gs_request.c  gs_response.c  gs_server.c  request.c  response.c  server.c
src/operators/: gs_scan.c  scan.c
src/records/: gs_document.c  gs_value.c
src/routers/api/1.0/: collections.c  gs_collections.c  gs_databases.c  gs_nodes.c  gs_root.c  (+2 more)
src/storage/: buffer.c  database.c  dirs.c  files.c  memory.c  timespan.c
storage/: anitbuf.c  attribute.c  memory.c  schema.c  slotted_page.c  table.c
tools/: CMakeCache.txt  Makefile
utils/tableimg/: launcher.c
utils/tpch_convert/: common.h  launcher.c  types.h
utils/tpch_convert/tables/: customer.h  lineitem.h  nation.h  orders.h  part.h  partsupp.h  region.h  supplier.h
(+5 files in other folders)
